crates/carta/tests/snapshots/docx__docx__tracked-changes.snap
---
source: crates/carta/tests/docx.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<w:document xmlns:w="http://schemas.openxmlformats.org/wordprocessingml/2006/main" xmlns:m="http://schemas.openxmlformats.org/officeDocument/2006/math" xmlns:r="http://schemas.openxmlformats.org/officeDocument/2006/relationships" xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:w10="urn:schemas-microsoft-com:office:word" xmlns:a="http://schemas.openxmlformats.org/drawingml/2006/main" xmlns:pic="http://schemas.openxmlformats.org/drawingml/2006/picture" xmlns:wp="http://schemas.openxmlformats.org/drawingml/2006/wordprocessingDrawing">
<w:body>
<w:p>
<w:pPr>
<w:pStyle w:val="FirstParagraph" />
</w:pPr>
<w:r>
<w:t xml:space="preserve">Keep</w:t>
</w:r>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<w:ins w:id="1" w:author="Alice" w:date="2020-01-01T09:00:00Z">
<w:r>
<w:t xml:space="preserve">first</w:t>
</w:r>
</w:ins>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<w:ins w:id="2" w:author="Alice" w:date="2020-01-01T09:00:00Z">
<w:r>
<w:t xml:space="preserve">second</w:t>
</w:r>
</w:ins>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<w:r>
<w:t xml:space="preserve">but</w:t>
</w:r>
<w:r>
<w:t xml:space="preserve"> </w:t>
</w:r>
<w:del w:id="1" w:author="Bob" w:date="2020-02-02T10:00:00Z">
<w:r>
<w:delText xml:space="preserve">gone</w:delText>
</w:r>
<w:r>
<w:delText xml:space="preserve"> </w:delText>
</w:r>
<w:r>
<w:rPr>
<w:i />
<w:iCs />
</w:rPr>
<w:delText xml:space="preserve">stressed</w:delText>
</w:r>
</w:del>
<w:r>
<w:t xml:space="preserve">.</w:t>
</w:r>
</w:p>
<w:sectPr>
<w:footnotePr>
<w:numRestart w:val="eachSect" />
</w:footnotePr>
</w:sectPr>
</w:body>
</w:document>
